change pom for jetty and local